--- a/index.html
+++ b/index.html
@@ -27,51 +27,14 @@
     </p>
 </section>
 
-<section class="gallery">
-    <h2>Galeri Produk</h2>
-    <div class="gallery-grid">
-        <img src="herbal02.jpg" alt="Herbal">
-        <img src="jeruk02.avif" alt="Jeruk">
-        <img src="lavender02.jpg" alt="Lavender">
-        <img src="mawar02.jpeg" alt="Mawar">
-        <img src="vanila02.jpeg" alt="Vanila">
-    </div>
-</section>
-
 <section class="aroma">
     <h2>Varian Aroma</h2>
     <div class="aroma-grid">
-
-        <div class="aroma-card">
-            <img src="lavender01.jpg" alt="Lavender">
-            <h3>Lavender</h3>
-            <p>Menenangkan dan membantu relaksasi</p>
-        </div>
-
-        <div class="aroma-card">
-            <img src="herbal01.webp" alt="Herbal">
-            <h3>Herbal</h3>
-            <p>Aroma alami yang segar</p>
-        </div>
-
-        <div class="aroma-card">
-            <img src="jeruk01.webp" alt="Jeruk">
-            <h3>Jeruk</h3>
-            <p>Menyegarkan dan meningkatkan mood</p>
-        </div>
-
-        <div class="aroma-card">
-            <img src="mawar01.jpg" alt="Mawar">
-            <h3>Mawar</h3>
-            <p>Lembut dan romantis</p>
-        </div>
-
-        <div class="aroma-card">
-            <img src="vanila01.jpg" alt="Vanila">
-            <h3>Vanila</h3>
-            <p>Manis dan hangat</p>
-        </div>
-
+        <div class="aroma-card"><h3>Lavender</h3></div>
+        <div class="aroma-card"><h3>Herbal</h3></div>
+        <div class="aroma-card"><h3>Jeruk</h3></div>
+        <div class="aroma-card"><h3>Mawar</h3></div>
+        <div class="aroma-card"><h3>Vanila</h3></div>
     </div>
 </section>
 
@@ -80,7 +43,7 @@
     <h2>Order BioShine</h2>
     <p>Silakan isi data di bawah untuk melakukan pemesanan</p>
 
-    <div class="order-form">
+    <form class="order-form" id="orderForm">
         <input type="text" id="nama" placeholder="Nama Lengkap" required>
 
         <select id="varian" required>
@@ -96,8 +59,8 @@
 
         <textarea id="catatan" placeholder="Catatan (opsional)"></textarea>
 
-        <button class="btn" onclick="kirimWA()">Pesan Sekarang</button>
-    </div>
+        <button type="submit" class="btn">Pesan Sekarang</button>
+    </form>
 </section>
 
 <footer>
