Fix formatting and update order section text
Signed-off-by: 2302220488-cmd <2302220488@students.satyaterrabhinneka.ac.id>

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header class="hero">
     <div class="hero-overlay">
         <h1>BioShine</h1>
         <p class="hero-text">
-            Lilin aromaterapi alami untuk menciptakan ketenangan dan kenyamanan ruangan
+            Lilin aromaterapi alami untuk ketenangan dan kenyamanan ruangan
         </p>
         <a href="#order" class="btn">Order Sekarang</a>
     </div>
@@ -38,14 +37,12 @@
     </div>
 </section>
 
-<!-- ORDER -->
 <section id="order">
     <h2>Order BioShine</h2>
-    <p>Silakan isi data di bawah untuk melakukan pemesanan</p>
+    <p>Isi data di bawah untuk memesan:</p>
 
     <form class="order-form" id="orderForm">
         <input type="text" id="nama" placeholder="Nama Lengkap" required>
-
         <select id="varian" required>
             <option value="">Pilih Varian Aroma</option>
             <option>Lavender</option>
@@ -54,11 +51,8 @@
             <option>Mawar</option>
             <option>Vanila</option>
         </select>
-
         <input type="number" id="jumlah" placeholder="Jumlah" min="1" required>
-
         <textarea id="catatan" placeholder="Catatan (opsional)"></textarea>
-
         <button type="submit" class="btn">Pesan Sekarang</button>
     </form>
 </section>
